--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,12 @@ dependencies {
 	implementation 'mysql:mysql-connector-java:8.0.28'
 	// JPA 설정
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//Validation 적용
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// JWT
+	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 }
 
 tasks.named('test') {
